@@ -1,15 +1,0 @@
-From http://bugzilla.gnome.org/show_bug.cgi?id=144859:
-
-Marcus Leyman:
-
-[The devhelp.svg] shiny new single red book more or less stolen from
-adress-book-new.svg from the Tango-project with a few modifications.
-Tango-icons are Creative Commons Share Alike, so it should be ok as long
-as the author is attributed somewhere.
-
-
-See
-	http://www.tango-project.org/
-and
-	http://creativecommons.org/licenses/by-sa/2.5/
-for details.
